# nyaa-tui

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md
src/: app.rs  datamodel.rs  main.rs  nyaa_scraper.rs  nyaa_scrapper.rs  scraper.rs  tui.rs
src/nyaa_scraper/: datamodel.rs  mod.rs
src/tui/: downloads.rs  home.rs  nyaa.rs
