[package]
name = "nyaa-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["gzip"] }
reqwest-middleware = "0.2.3"
reqwest-retry = "0.2.2"
tokio = { version = "1.29.1", features = ["full"] }
tui = "0.19.0"
unhtml = { version = "0.8.0", features = ["derive"] }
