[package]
name = "nyaa-tui"
version = "1.1.0"
edition = "2021"
authors = ["woolw <woolw@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["gzip"] }
reqwest-middleware = "0.2.3"
reqwest-retry = "0.2.2"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
tokio = { version = "1.29.1", features = ["full"] }
unhtml = { version = "0.8.0", features = ["derive"] }
